# PharmacyAdministration

./: CMakeLists.txt  main.cpp
Controller/: Controller.cpp  Controller.h
Domain/: Domain.h
Repository/: Repo.cpp  Repo.h
Tests/: tests.cpp  tests.h
UI/: UI.cpp  UI.h
